Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MostSpecific24.out
MostSpecific24.java:17:9: compiler.err.ref.ambiguous: m1, kindname.method, <T>m1(MostSpecific24.F1<T>), MostSpecific24, kindname.method, m1(MostSpecific24.F2), MostSpecific24
1 error
